# schemeppl

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build-and-deploy.yml
appl/: README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
appl/src/app/: layout.tsx  page.tsx
appl/src/components/: AlgorithmDescription.tsx  Charts.tsx  Controls.tsx  Statistics.tsx  Stats.tsx  WalkVisualization.tsx
appl/src/hooks/: useMetropolisHastings.ts  useSimulator.ts  useWorker.ts
appl/src/lib/chart/: zoomAndPanPlugin.ts
appl/src/types/: simulation.ts
appl/src/utils/: stats.ts
appl/src/worker/: worker.ts
appl/wasm/: Cargo.toml
crates/ppl/: Cargo.toml
crates/ppl/src/: address.rs  ast.rs  choice_map.rs  distributions.rs  eval.rs  gfi.rs  inference.rs  lib.rs  parser.rs  primitives.rs  trace.rs  trie.rs  utils.rs
crates/ppl/src/core/: address.rs  gfi.rs  mod.rs
crates/ppl/src/dsl/: ast.rs  eval.rs  handlers.rs  mod.rs  parser.rs  primitives.rs  trace.rs
crates/ppl/src/dynamic/: handlers.rs  mod.rs  trace.rs
crates/ppl/tests/: inference.rs  model.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
