[package]
name = "ppl"
version.workspace = true
edition.workspace = true

[dependencies]
lexpr = "0.2.7"
nalgebra = "0.33.2"
ndarray = "0.16.1"
num-traits = "0.2.0"
rand = { version = "0.8", features = ["std"] }
serde = "1.0.219"
serde_json = "1.0.140"
statrs = { version = "0.18.0", features = ["rand"] }
