[package]
name = "wasm"
version.workspace = true
edition.workspace = true

[dependencies]
ppl = { path = "../ppl" }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.10", features = ["js"] }
statrs = { version = "0.18.0", features = ["rand"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true